crates/llvmkit-ir/tests/compile_fail/finished_switch_cannot_reopen_through_terminator_kind.stderr
error[E0599]: no method named `add_case` found for struct `SwitchInst<'_, llvmkit_ir::term_open_state::Closed, Brand<'_>>` in the current scope
  --> tests/compile_fail/finished_switch_cannot_reopen_through_terminator_kind.rs:23:30
   |
23 |             let _ = reopened.add_case(i32_ty.const_int(1_i32), dest_label);
   |                              ^^^^^^^^ method not found in `SwitchInst<'_, llvmkit_ir::term_open_state::Closed, Brand<'_>>`
   |
   = note: the method was found for
           - `SwitchInst<'ctx, llvmkit_ir::term_open_state::Open, B, W>`
           - `SwitchInst<'ctx, llvmkit_ir::term_open_state::Open, B>`
